# corpusaige

./: .gitignore  .gitmodules  LICENSE.txt  README.md  create-meta-data.py  mypy.ini  playground.py  pyproject.toml  setpath.ps1  setup.py
corpusaige/: __init__.py  __main__.py  app_meta_data.py  cli.py  config.py  console_tools.py  conversations.py  corpus.py  documentset.py  exceptions.py  gui.py  interactions.py  protocols.py  providers.py  registry.py  repl.py  shell.py  storage.py
corpusaige/audio/: audio_utils.py  voice_conversation.py
corpusaige/config/: __init__.py  create.py  read.py
corpusaige/data/: __init__.py  annotations.py  conversations.py  db.py  keyvalue_store.py
corpusaige/providers/: __init__.py  chroma.py  openai.py
corpusaige/ui/: cli.py  console_tools.py  gui.py  gui_tools.py  repl.py  shell.py
corpusaige/ui/audio/: audio_utils.py  text_handling.py  voice_conversation.py
doc/: conf.py  index.rst
docs/: notes.txt
notebooks/: prototype.ipynb  workbench-test-case.ipynb
scratch/: The chapters in The Rust Programmin.txt  notes.txt
test-case/: chapters.txt  create-rust-test-case.py  rust-test-case-corpus.ini  test-chroma.py
test-case/Nietzsche and Rust/: Nietzsche and Rust.txt
test-case/cv/: ResumeDataSet.csv  convert.py
test-case/gutenberg/: Nietsche-Ecco Homo.txt  Thus Spake Zarathustra, by Friedrich Nietzsche.txt
test-case/scripts/: hello.py
tests/: create-test-corpus.py  fill-test-corpus.py  test_cli.py  test_conversations.py  test_corpus.py  test_corpus_creation.py  test_document_loader.py  test_documentset.py  test_keyvalue_store.py  test_playtext.py  test_plugins.py
tests/assets/: prompt-test.txt
tests/assets/plugins/: another_plugin.py  plugin.py
