[tool.poetry]
name = "Corpusaige"
version = "0.10.0"
description = "Corpusaige is a Python tool (and utility library) enabling AI-powered systems analysis through deep exploration and understanding of comprehensive document sets and source code."
authors = ["Iwan van der Kleijn <iwanvanderkleijn@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13" #"^3.11"
jupyterlab = "^4.0.3"
pandas = "^2.0.2"
matplotlib = "^3.7.1"
nbstripout = "^0.6.1"
langchain = "^0.0.242"
openai = "^0.27.8"
pydantic = "^1.10.8" 
tiktoken = "^0.4.0"
unstructured = "^0.8.1"
autopep8 = "^2.0.2"
prompt-toolkit = "^3.0.39"
types-pygments = "^2.15.0.1"
pytest = "^7.4.0"
chromadb = "^0.4.3"
sqlalchemy = "^2.0.19"
toml = "^0.10.2"
gtts = "^2.3.2"
sounddevice = "^0.4.6"
wavio = "^0.0.7"
pynput = "^1.7.6"
speechrecognition = "^3.10.0"
pydub = "^0.25.1"
numpy = "^1.26.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"
sphinx = "^7.0.1"
ruff = "^0.0.282"
pyinstaller = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Never enforce `E501` (line length violations).
ignore = ["E501"]
